# xauusd-ml-dl-trading-capstone

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-deployment.txt  requirements-research.txt  requirements.txt  run_dukascopy_full_history.cmd  run_dukascopy_review_days.cmd
config/: model_a_frozen.yaml  model_b_v2_frozen.yaml  stage0_freeze_manifest.json
docs/deployment/: deployment_specification_v1.md  model_b_v2_rationale.md  stage1_step1_patch_manifest.json  stage1_step1_review.md  stage1_step1_runbook.md
notebook_outputs/01_m5_m15_timeframe_feasibility_eda/: eda_findings_draft.txt
notebook_outputs/02_m5_m15_lightgbm_screening/: lightgbm_screening_findings_draft.txt
notebook_outputs/03_m15_lightgbm_walkforward_full_harmonised/: m15_lightgbm_harmonised_full_findings_draft.txt
notebook_outputs/04_m15_lstm_walkforward_full_harmonised/: m15_lstm_harmonised_full_findings_draft.txt
notebooks/: 01_m5_m15_relative_timeframe_feasibility_eda.ipynb  02_m5_m15_lightgbm_walkforward_screening.ipynb  03_m15_lightgbm_walkforward_full.ipynb  04_m15_lstm_walkforward_full.ipynb  05_m15_cnn_lstm_walkforward_full.ipynb  06_m15_cross_model_comparison_and_candidate_selection.ipynb  07_m15_cnn_lstm_final_holdout_evaluation.ipynb
scripts/: 01_download_validate_dukascopy_xauusd_m1_daily.py  02_aggregate_dukascopy_daily_to_m1_master.py  06_prepare_m5_m15_relative_datasets_v2.py  07_verify_m5_m15_relative_pipeline.py  inspect_one_dukascopy_csv.py  rerun_dukascopy_review_days.py  test_mt5_connection.py
scripts/deployment/: verify_notebook7_artifacts.py
(+208 files in other folders)
