[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xauusd-capstone-trading"
version = "0.1.0"
description = "Auditable MT5 demo deployment components for the XAUUSD master capstone"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Hao Zac Chin" }]
dependencies = [
  "joblib>=1.3,<2.0",
  "numpy>=1.26,<2.3",
  "pandas>=2.2,<3.0",
  "PyYAML>=6.0,<7.0",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: requires local frozen Notebook 7 artefacts",
  "tensorflow: requires the pinned TensorFlow/Keras environment",
]
